Restructure project into src/ layout
Move all car code into src/car/ and create src/training/ for
future model code. Rename manage.py to main.py. Update all
imports, config CAR_PATH, pyproject.toml script entry, and
gitignore paths.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ __pycache__/
 pi/
 
 # SSL certs (generated at runtime)
-web_controller/server.crt
-web_controller/server.key
+src/car/web/server.crt
+src/car/web/server.key
 
 # Training data
 data/
