Add PilotNet model and torch dependency
Implement PilotNet CNN architecture for behavioral cloning based
on NVIDIA's end-to-end self-driving paper. Add torch and
torchvision dependencies with CUDA 13.0 support.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,22 @@ dependencies = [
   "numpy>=2.0.0",
   "pillow>=12.1.0",
   "smbus2>=0.5.0",
+  "torch",
+  "torchvision",
   "tornado>=6.5.4",
 ]
 
+[tool.uv.sources]
+torch = [{ index = "pytorch-cu130" }]
+torchvision = [{ index = "pytorch-cu130" }]
+
 [project.scripts]
 drive = "main:main"
+
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
+
+[tool.uv]
+index-strategy = "unsafe-best-match"
